--- a/app/views/subscriptions/redraw.js.erb
+++ b/app/views/subscriptions/redraw.js.erb
@@ -1,2 +1,2 @@
-$("#subscriptions_form_modal").modal("hide");
+$("#z_hub_modal").modal("hide");
 $('table.datatable:visible').dataTable().api().draw(false);
