--- a/app/views/admin/app_instances/index.html.erb
+++ b/app/views/admin/app_instances/index.html.erb
@@ -6,16 +6,12 @@
   </ul>
 <% end %>
 
-<div class="row">
-  <div class="col-lg-12">
-    <div class="green-header">
-      <h2>App Instances</h2>
-    </div>
-    <div class='tab-pane active'>
-      <% table_actions = capture do %>
-      <% end %>
-      <%= render_datatable(ZuoraConnect::AppInstance, admin_app_instances_path(format: "json"), :table_actions => table_actions, :table_filters => [], :columns => datatable_columns(ZuoraConnect::AppInstance)) %>
-    </div>
+<div class="green-header">
+  <h1>App Instances</h1>
+</div>
+<div class="tab-content">
+  <div class="tab-pane active">
+    <%= render_datatable(ZuoraConnect::AppInstance, admin_app_instances_path(format: "json")) %>
   </div>
 </div>
 
