--- a/app/views/application/errors.js.erb
+++ b/app/views/application/errors.js.erb
@@ -3,7 +3,7 @@
 <% else %>
   $('#content').html('<%= escape_javascript render(:file=> "/application/errors", :formats => [:html]) %>');
   <% if !is_app_admin? %>
-    $('#admin_button').remove();
+    $('#admin-menu').remove();
   <% end %>
   //history.pushState({}, '', '<%= request.original_url  %>');
 <% end %>
