--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,68 +16,21 @@
     <link rel="shortcut icon" href="<%= asset_path 'icon_48.png' %>" type="image/x-icon">
     <link rel="icon" href="<%= asset_path 'icon_48.png' %>" type="image/x-icon">
     <link rel="apple-touch-icon" href="<%= asset_path 'icon_48.png' %>">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700" rel="stylesheet">
+    <link href="https://d3ntcvh9ql14ma.cloudfront.net/zui/1.4.0/css/zui.icons.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default hidden">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button id='left-nav-toggle' aria-controls="left-nav" aria-expanded="false" class="navbar-toggle left" data-target="#left-nav" data-toggle="collapse" type="button">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-          <button aria-controls="right-nav" aria-expanded="false" class="navbar-toggle collapsed" data-target="#right-nav" data-toggle="collapse" type="button">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-
-          <div class="popover dataBox" id="left-nav">
-            <div class="navigation">
-              <span class="hidden icon-nav-dock2">&nbsp;</span>
-              <span class="icon-nav-expand2"></span>
-            </div>
-            <div class="nav_bottom" style="height: 12px; display: none;"></div>
-          </div>
-        </div>
-
-        <div id="right-nav" aria-expanded="false"  class="navbar-collapse collapse ">
-          <ul class="nav navbar-nav">
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%#= link_to( , new_user_session_path, :remote => true) %></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
     <div id="main" role="main">
-      <div id='breadcrumbs'>
-        <%= yield :breadcrumbs %>
-      </div>
-      <% if is_app_admin? %>
-        <div id='admin_button' class="pull-right" style="margin: -27px 18px 0px 0px;">
-          <font id='peekbar' size="-5" style="margin-right: 5px;">
-            <%= render 'peek/bar' %> <%= yield :peekbar %>
-            <b>Zuora Connect Gem Version:</b>
-            <%= Gem.loaded_specs["zuora_connect"].version %>
-            <b style="margin-left: 5px;">App Instance:</b>
-            <%= @appinstance.id %>
-          </font>
-          <div class="btn-group dropdown">
-            <a class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu" style="left: -64px;min-width: 120px;">
-              <li><a href="/admin/resque_web">Resque Web</a></li>
-              <li><a href="/admin/redis-browser" target="_blank">Redis Web</a></li>
-              <li><a href="/admin/app_instances">App Instances</a></li>
-            </ul>
-          </div>
+      <div id="breadcrumb-bar">
+        <div id='breadcrumbs'>
+          <%= yield :breadcrumbs %>
         </div>
-      <% end %>
+        <%= render 'partials/admin_menu', peek_bar: true do %>
+          <li><a href="/admin/resque_web">Resque Web</a></li>
+          <li><a href="/admin/redis-browser" target="_blank">Redis Web</a></li>
+          <li><a href="/admin/app_instances">App Instances</a></li>
+        <% end %>
+      </div>
 
       <div id="content">
         <%= yield %>
@@ -90,9 +43,6 @@
 
     <script type="text/javascript">
       $(document).ready(function(){
-        $('body').find(".nav.tab-header a:not('.skip'), #content .nav.nav-tabs a:not('.skip'), .modal-content .nav.tab-header a:not('.skip')").click(function (e) {e.preventDefault(); $(this).tab('show')});
-
-        $('body').find('.dropdown-toggle[data-toggle="hold"]').dropdownHold();
         <%= yield :scripts %>
         if ('<%= notice %>' != ""){noty({text: "<%= notice %>", layout: "topRight",type: "success", animateOpen: {opacity: "show"}, closeWith: ["hover"]});}
         if ('<%= alert %>' != ""){noty({text: "<%= alert %>", layout: "topRight",type: "warning", animateOpen: {opacity: "show"}, closeWith: ["hover"]});}
