--- a/app/views/subscriptions/edit.js.erb
+++ b/app/views/subscriptions/edit.js.erb
@@ -1,2 +1,1 @@
-$("#subscriptions_form_modal").html("<%= escape_javascript(render 'edit') %>");
-$("#subscriptions_form_modal").modal("show");
+<%  render(:file=>"subscriptions/edit", locals: {}, :formats => [:html] ) %>
