--- a/lib/templates/erb/scaffold/_actions.html.erb
+++ b/lib/templates/erb/scaffold/_actions.html.erb
@@ -1,3 +1,12 @@
-<%%= link_to 'Show', <%= singular_table_name %>, :remote => true, :class => 'btn btn-success btn-margin-sm'  %>
-<%%= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :remote => true, :class => 'btn btn-success btn-margin-sm'  %>
-<%%= link_to 'Destroy', <%= singular_table_name %>, :remote => true, :method => :delete, :class => 'btn btn-danger btn-margin-sm', :data =>{ :confirm => 'Are you sure?' } %>
+<%= render 'partials/row_actions' do %>
+  <li>
+    <%%= link_to 'Show', <%= singular_table_name %>, remote: true %>
+  </li>
+  <li>
+    <%%= link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>), { remote: true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window' } %>
+  </li>
+  <li class="divider"></li>
+  <li>
+    <%%= link_to 'Delete', <%= singular_table_name %>, remote: true, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </li>
+<% end %>
