--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -4,16 +4,15 @@
 
 <%% content_for :modal do %>
   <%%= form_for(@<%= singular_table_name %>, {:url => url_for(:controller => controller.controller_name, :action => ['update','edit'].include?(controller.action_name) ? 'update' : 'create'), remote: true,  authenticity_token: true, :html => {:multipart => true, :class=>'form-horizontal'}}) do |f| %>
-    <div class="modal-dialog" style="width: 800px">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-          <h4 class="modal-title"><%%= ['update','edit'].include?(controller.action_name) ? "Update" : "New" %> <%= singular_table_name.titleize %></h4>
+          <h2 class="modal-title"><%%= ['update','edit'].include?(controller.action_name) ? "Update" : "New" %> <%= singular_table_name.titleize %></h2>
         </div>
         <div class="overlay">
-          <i id="loading_form_icon" class="glyphicon glyphicon-refresh glyphicon-spin"></i>
+          <span id="loading_form_icon" class="glyphicon glyphicon-refresh glyphicon-spin"></span>
         </div>
-        <div class="modal-body z-background">
+        <div class="modal-body">
           <%% if f.object.errors[:base].size > 0 %>
             <div class="alert alert-danger" role="alert">
               <ul>
@@ -27,6 +26,7 @@
             <div class="row form-group">
               <div class="col-lg-12 col-md-12 controls <%%= f.object.errors[:name].empty? ? '' : 'has-error has-feedback' %>">
                 <%%= f.<%= attribute.field_type %> :<%= attribute.column_name %>, {:class => 'form-control', :placeholder => true} %>
+                <%%= f.label :<%= attribute.column_name %>, class: '' %>
                 <%%= '<span class="glyphicon glyphicon-remove form-control-feedback"></span>'.html_safe if !f.object.errors[:name].empty?  %>
                 <%% f.object.errors[:name].uniq.each do | message| %>
                    <p class="help-block" ><%%= message %></p>
@@ -36,8 +36,8 @@
           <% end -%>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%%= f.submit :class => "btn btn-primary", :value => ['update','edit'].include?(controller.action_name) ? "Update" : "Create" %>
+          <button type="button" class="zuo-btn secondary" data-dismiss="modal">Cancel</button>
+          <%%= f.submit :class => "zuo-btn primary", :value => ['update','edit'].include?(controller.action_name) ? "Update" : "Create" %>
         </div>
       </div>
     </div>
